--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -1,65 +1,164 @@
-<nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
+<nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg" style="background-color: transparent;">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <img src="/static/assets/img/brand/white.png" alt="Argon Design - Template Starter Logo.">
+      <img src="/static/assets/img/brand/chicken-logo-white.png" alt="Logo Élevage de poules" style="max-height: 40px;">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"
+            aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation"
+            style="border-color: #a57c3c;">
+      <span class="navbar-toggler-icon" style="background-image: url('data:image/svg+xml;charset=utf8,<svg viewBox=\'0 0 30 30\' xmlns=\'http://www.w3.org/2000/svg\'><path stroke=\'%23a57c3c\' stroke-width=\'2\' stroke-linecap=\'round\' stroke-miterlimit=\'10\' d=\'M4 7h22M4 15h22M4 23h22\'/></svg>');"></span>
     </button>
-    <div class="navbar-collapse navbar-custom-collapse collapse" id="navbar-collapse">
+    <div class="navbar-collapse navbar-custom-collapse collapse" id="navbar-collapse" style="background-color: #f3ecd7;">
       <div class="navbar-collapse-header">
         <div class="row">
           <div class="col-6 collapse-brand">
             <a href="/">
-              <img src="/static/assets/img/brand/blue.png">
+              <img src="/static/assets/img/brand/chicken-logo-brown.png" alt="Logo brun" style="max-height: 35px;">
             </a>
           </div>
           <div class="col-6 collapse-close">
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span></span>
-              <span></span>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse"
+                    aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation"
+                    style="border-color: #a57c3c;">
+              <span style="background-color:#a57c3c;"></span>
+              <span style="background-color:#a57c3c;"></span>
             </button>
           </div>
         </div>
       </div>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a href="{% url 'login' %}" class="nav-link">
-            <span class="nav-link-inner--text">Login</span>
+          <a href="{% url 'login' %}" class="nav-link" style="color: #6b4c1a; font-weight: 600;">
+            <span class="nav-link-inner--text">Connexion</span>
           </a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'register' %}" class="nav-link">
-            <span class="nav-link-inner--text">Register</span>
+          <a href="{% url 'register' %}" class="nav-link" style="color: #6b4c1a; font-weight: 600;">
+            <span class="nav-link-inner--text">Inscription</span>
           </a>
         </li>
       </ul>
-      <hr class="d-lg-none" />
+      <hr class="d-lg-none" style="border-color: #a57c3c;" />
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.facebook.com/webappseed" 
-             target="_blank" data-toggle="tooltip" data-original-title="Like us on Facebook">
+          <a class="nav-link nav-link-icon" href="https://www.facebook.com/webappseed" target="_blank"
+             data-toggle="tooltip" data-original-title="Suivez-nous sur Facebook" style="color: #3b5998;">
             <i class="fab fa-facebook-square"></i>
             <span class="nav-link-inner--text d-lg-none">Facebook</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com/webappseed" 
-             target="_blank" data-toggle="tooltip" data-original-title="Follow us on Twitter">
+          <a class="nav-link nav-link-icon" href="https://twitter.com/webappseed" target="_blank"
+             data-toggle="tooltip" data-original-title="Suivez-nous sur Twitter" style="color: #1da1f2;">
             <i class="fab fa-twitter-square"></i>
             <span class="nav-link-inner--text d-lg-none">Twitter</span>
           </a>
         </li>
         <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro" 
-             target="_blank" class="btn btn-neutral btn-icon">
+          <a href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro" target="_blank" class="btn btn-neutral btn-icon"
+             style="background-color: #a57c3c; color: #fff; border: none;">
             <span class="btn-inner--icon">
               <i class="fas fa-rocket mr-2"></i>
             </span>
-            <span class="nav-link-inner--text">PRO Version</span>
+            <span class="nav-link-inner--text">Version PRO</span>
           </a>
         </li>
       </ul>
+    </div>
+  </div>
+</nav>
+www.w3.org
+Nour
+<nav class="sidenav navbar navbar-vertical fixed-left navbar-expand-xs navbar-light" id="sidenav-main" style="background-color: #f8f5ec; border-right: 1px solid #d1c7a1;">
+  <div class="scrollbar-inner">
+    <!-- Brand -->
+    <div class="sidenav-header align-items-center" style="padding: 1rem;">
+      <a class="navbar-brand" href="/">
+        <img src="/static/assets/img/brand/chicken-logo-brown.png" class="navbar-brand-img" alt="Logo Élevage de poules" style="max-height: 50px;">
+      </a>
+    </div>
+    <div class="navbar-inner">
+      <!-- Collapse -->
+      <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+        <!-- Nav items -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/" style="{% if 'index' in segment %} background-color: #a3864a; color: #fff; {% else %} color: #6b4c1a; {% endif %}">
+              <i class="ni ni-tv-2" style="color: {% if 'index' in segment %} #fff {% else %} #a57c3c {% endif %};"></i>
+              <span class="nav-link-text">Tableau de bord</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/icons.html" style="{% if 'icons' in segment %} background-color: #a3864a; color: #fff; {% else %} color: #6b4c1a; {% endif %}">
+              <i class="ni ni-planet" style="color: {% if 'icons' in segment %} #fff {% else %} #d0873c {% endif %};"></i>
+              <span class="nav-link-text">Icônes</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'map' in segment %} active {% endif %}" href="/map.html" style="{% if 'map' in segment %} background-color: #a3864a; color: #fff; {% else %} color: #6b4c1a; {% endif %}">
+              <i class="ni ni-pin-3" style="color: {% if 'map' in segment %} #fff {% else %} #a57c3c {% endif %};"></i>
+              <span class="nav-link-text">Google</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html" style="{% if 'profile' in segment %} background-color: #a3864a; color: #fff; {% else %} color: #6b4c1a; {% endif %}">
+              <i class="ni ni-single-02" style="color: {% if 'profile' in segment %} #fff {% else %} #d0a94a {% endif %};"></i>
+              <span class="nav-link-text">Profil</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="/tables.html" style="{% if 'tables' in segment %} background-color: #a3864a; color: #fff; {% else %} color: #6b4c1a; {% endif %}">
+              <i class="ni ni-bullet-list-67" style="color: {% if 'tables' in segment %} #fff {% else %} #7c7151 {% endif %};"></i>
+              <span class="nav-link-text">Tableaux</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login.html" style="color: #6b4c1a;">
+              <i class="ni ni-key-25 text-info" style="color: #5a7a3c;"></i>
+              <span class="nav-link-text">Connexion (template)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register.html" style="color: #6b4c1a;">
+              <i class="ni ni-circle-08 text-pink" style="color: #a65c5c;"></i>
+              <span class="nav-link-text">Inscription (template)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}" style="color: #b02a2a;">
+              <i class="ni ni-user-run text-red"></i>
+              <span class="nav-link-text">Déconnexion</span>
+            </a>
+          </li>
+        </ul>
+        <!-- Divider -->
+        <hr class="my-3" style="border-color: #d1c7a1;">
+        <!-- Heading -->
+        <h6 class="navbar-heading p-0 text-muted" style="color: #8b7a50;">
+          <span class="docs-normal">Ressources</span>
+        </h6>
+        <!-- Navigation -->
+        <ul class="navbar-nav mb-md-3">
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="https://appseed.us/admin-dashboards/django-dashboard-argon" style="color: #6b4c1a;">
+              <i class="ni ni-archive-2" style="color: #7c6e4d;"></i>
+              <span class="nav-link-text">Page produit</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro" style="color: #b33a3a;">
+              <i class="ni ni-spaceship" style="color: #b33a3a;"></i>
+              <span class="nav-link-text text-red">Version PRO</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active active-pro" target="_blank" href="http://appseed.us" style="color: #4b3b1f;">
+              <i class="ni ni-send text-dark" style="color: #4b3b1f;"></i>
+              <span class="nav-link-text">AppSeed</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
